# igrat

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  __init__.py  igra_stations.csv  igra_utils.py  igrat.py  profile.nc  pyproject.toml  setup.cfg
docs/: api_reference.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  requirements.txt
docs/examples/: basic_usage.rst  index.rst
docs/user_guide/: getting_started.rst  index.rst
igrat/: availability.py  df_examples.ipynb  examples.ipynb  igrat.py  igratmetadata.py  netcdf_examples.ipynb  tropospheric_example.ipynb
igrat/availability/: ACM00078861-availability.json  AEM00041217-availability.json  AEXUAE05467-availability.json  AFM00040911-availability.json  AFM00040913-availability.json  AFM00040938-availability.json  AFM00040948-availability.json  AFM00040990-availability.json  AGM00060355-availability.json  AGM00060360-availability.json  AGM00060402-availability.json  AGM00060419-availability.json  AGM00060425-availability.json  AGM00060430-availability.json  AGM00060445-availability.json  AGM00060475-availability.json  AGM00060490-availability.json  AGM00060511-availability.json  AGM00060525-availability.json  AGM00060535-availability.json  AGM00060549-availability.json  AGM00060550-availability.json  AGM00060559-availability.json  AGM00060566-availability.json  AGM00060580-availability.json  AGM00060590-availability.json  AGM00060602-availability.json  AGM00060607-availability.json  AGM00060611-availability.json  AGM00060620-availability.json  AGM00060625-availability.json  AGM00060640-availability.json  AGM00060656-availability.json  AGM00060670-availability.json  AGM00060678-availability.json  AGM00060686-availability.json  AGXUAE04843-availability.json  AJM00037575-availability.json  AJM00037735-availability.json  AJM00037747-availability.json  (+1585 more)
