[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igrat"
version = "0.1.0"
description = "IGRA (Integrated Global Radiosonde Archive) Toolkit"
readme = "README.md"
authors = [
    {name = "Peter Phan", email = "tammy.phan@utoronto.ca"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "numpy",
    "xarray",
    "netCDF4",
    "requests",
    "plotly",
    "matplotlib",
    "cartopy",
    "mplcursors",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "pandoc",
    "ipykernel",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "nbsphinx>=0.8.0",
    "pandoc>=2.0.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools]
packages = ["igrat"] 