[metadata]
name = igrat
version = 0.1.0
description = IGRA (Integrated Global Radiosonde Archive) Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Phan
author_email = tammy.phan@utoronto.ca
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find:
install_requires =
    pandas
    numpy
    xarray
    netCDF4
    requests
    plotly
    matplotlib
    cartopy
    mplcursors

[options.extras_require]
dev =
    pytest
    black
    flake8
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    nbsphinx
    pandoc
    ipykernel
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints>=1.12.0
    nbsphinx>=0.8.0
    pandoc>=2.0.0
    ipykernel>=6.0.0 